Adding lausanne border

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4-src.min.js" integrity="sha512-iI+gnM9YVv7BvTOmF+2w2f154LkOee1RAa3lDt9C1EPTfJDMtGPj/tuCyJTpH6M8sjQg8Mdl/xvF4ZgqiVpREw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-
+    <!-- Laaflet ajax -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js' integrity='sha512-Abr21JO2YqcJ03XGZRPuZSWKBhJpUAR6+2wH5zBeO4wAw4oksr8PRdF+BKIRsxvCdq+Mv4670rZ+dLnIyabbGw==' crossorigin='anonymous'></script>
 
     <!-- Load leaflet geo search. Has to be  AFTER leaflet.js, when using with leaflet -->
     <script src="https://unpkg.com/leaflet-geosearch@3.7.0/dist/geosearch.umd.js"></script>
