--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
             </div> <!-- End of destination button -->
 
             <!-- Add a reset button for lat/lon/path. the function is defined in js file   -->
-            <button id="resetBtn"  type="button" title="Remettre à zéro la destination et le départ" onclick=reset()>
+            <button id="resetBtn"  type="button" title="Remettre à zéro l'application" onclick=reset()>
                 Recommencer
             </button>
             <br>
