--- a/templates/index.html
+++ b/templates/index.html
@@ -66,8 +66,8 @@
                 <input class="form-check-input" id="pente" type="checkbox" role="switch" name="settings" value="pente" checked>
                 <label class="form-check-label"> Pente </label>
                 <br>
-                <!-- Intersections -->
-                <input class="form-check-input" id="intersections" type="checkbox" role="switch" name="settings" value="intersections" checked>
+                <!-- Intersections do not check it 1st for rapidity -->
+                <input class="form-check-input" id="intersections" type="checkbox" role="switch" name="settings" value="intersections">
                 <label class="form-check-label"> Intersections </label>
                 <br>
                 <!-- HP_matin -->
