--- a/templates/index.html
+++ b/templates/index.html
@@ -34,19 +34,19 @@
             <br>
 
             <!-- Destination button -->
-            <div class="input-group mb-3">
+            <div class="input-group mb-3"> 
                 <!-- Prepend, what is in front (image of marker) -->
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1"> <img src="static/img/marker_dest.svg" width="45" height="20"> </span>
+                    <span class="input-group-text" id="basic-addon1"> <img src="static/img/marker_dest.svg" width="45" height="18"> </span>
                 </div>
                 <!-- Geosearcher text box from Leaflet Geosearch-->
                 <form id="geosearch-destination">
-                    <input type="text" placeholder="Adresse de destination (Ou clique sur carte/bouton)" value="">
+                    <input type="text" placeholder="Destination (Ou clique sur carte/boutton)" value="" size="30" height="35">
                 </form>
                 <!-- Append, what is after text box ; button of get localisation (image of localisation) -->
                 <div class="input-group-append">
                     <button id="btnGetLocDest" class="btn btn-outline-secondary current-location" type="button" title="Centrer sur votre position">
-                    <img src="/static/img/current-location.svg" width="18" height="18">
+                    <img src="/static/img/current-location.svg" width="15" height="15">
                     </button>
                 </div>
             </div> <!-- End of destination button -->
@@ -71,7 +71,7 @@
                 <label class="form-check-label"> Intersections </label>
 
             </div>
-   
+
     </div> <!-- end of sidebar -->
 
 </div> <!-- End of main -->
