Trying to add different choices of coloring for the path

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,10 @@
                 </button>
             </div>
             <br>
+            <!-- To choose what is display in the -->
+            <input type="checkbox" id="legend_CQ" onchange="processCheck(this)" name="coloring" value="legend_CQ"> Qualité cyclable <br>
+            <input type="checkbox" id="legend_grade" onchange="processCheck(this)" name="coloring" value="legend_grade"> Pente <br>
+            <input type="checkbox" id="legend_infra" onchange="processCheck(this)" name="coloring" value="legend_infra"> Qualité infrastructures cyclables<br>
 
             <!-- Checkboxes to personalize routing data-->
             <!-- VAE -->
