Correcting some bugs

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
     <div id="sidebar" class="sidebar">
 
         <!-- Explication about the web app -->
-        <p id="explication"> Cette application permet de trouver un itinéraire à vélo le plus sûr et confortable possible. Définissez votre point de départ et destination, soit en cliquant sur la carte soit en cherchant l'adresse.</p>
-
+        <p id="explication"> Cette application permet de déterminer un itinéraire à vélo le plus sûr et le plus confortable possible en tenant compte de la pente, les aménagements cyclables en lien avec la vitesse et le trafic, des poids lourds et de l'environnement. 
+        Définissez votre point de départ et votre destination pour démarrer l'application. Vous pouvez aussi chosir d'intégrer ou non la pente et les intersections (soyez alors patient·e, l'algorithme est bien plus lent)</p>
         <!-- Add different possibilities to determine start and destination -->
             <!-- Start button -->
             <div class="input-group mb-3">
@@ -64,11 +64,11 @@
                 </button>
             </div>
             <br>
-            <!-- To choose what is display in the -->
+            <!-- To choose what is display in the 
             <input type="checkbox" id="legend_CQ" onchange="processCheck(this)" name="coloring" value="legend_CQ"> Qualité cyclable <br>
             <input type="checkbox" id="legend_grade" onchange="processCheck(this)" name="coloring" value="legend_grade"> Pente <br>
             <input type="checkbox" id="legend_infra" onchange="processCheck(this)" name="coloring" value="legend_infra"> Qualité infrastructures cyclables<br>
-
+            -->
             <!-- Checkboxes to personalize routing data-->
             <!-- VAE -->
             <br>
