Editing url to git readme

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
             <div id="footer" class="copyright">
                 2022 © Romain Götz
                 <a href="https://github.com/romgotz/application_routing" title="Code source" target="_blank" style="margin-left: 1em"><i class="bi-github"></i> <img src="static/img/icone_git.svg" width="20" height="20" class="infos"></a>
-                <a href="{{ url_for('about') }}" style="margin-left: 0.5em" target="_blank" title="Plus d'informations"> <img src="static/img/info_icone.svg" width="20" height="20" class="infos"> </a>
+                <a href="https://github.com/romgotz/application_routing#v%C3%A9lorouter-lausanne" style="margin-left: 0.5em" target="_blank" title="Plus d'informations"> <img src="static/img/info_icone.svg" width="20" height="20" class="infos"> </a>
             </div>
 
     </div> <!-- end of sidebar -->
